fixed layout issues after fixing ribbon

--- a/src/app-main/features/planning/style.css
+++ b/src/app-main/features/planning/style.css
@@ -1,4 +1,5 @@
 .page-container {
+    width: 100%;
     display: inline-block;
     vertical-align: top;
     height: calc(100% - 50px);
