--- a/src/hs-components/Layout/PageContainer/style.css
+++ b/src/hs-components/Layout/PageContainer/style.css
@@ -1,8 +1,8 @@
-.page-container {
+.page-content {
     display: inline-block;
     vertical-align: top;
-    /* overflow-y: scroll; */
+    overflow-y: scroll;
+    padding-top: 15px;
     height: calc(100% - 64px);
     min-height: calc(100% - 64px);
-    max-height: calc(100% - 64px);
 }
